# ai-gateway

./: .gitignore  go.mod
api/v1alpha1/: api.go
cmd/extproc/: main.go
cmd/extproc/mainlib/: main.go  main_test.go
docs/: chat-with-ai-gw.py  developer_guide.md  envoy.yaml  extproc-config.yaml  grafana-dashboard.json  index.md  test_openai.go  test_openai.py
docs/proposals/002-routing-processor-proposal/: Makefile  proposal.md  routing-processor.proto  routing_processor.proto
docs/proposals/002-routing-processor-proposal/poc/semantic_cache/client/: main.go
docs/proposals/002-routing-processor-proposal/poc/semantic_cache/server/: requirements.txt  routing_processor_pb2.py  (+2 more)
examples/extproc_custom_router/: main.go
extprocapi/: extproc.go
filterapi/: filterconfig.go
filterapi/x/: x.go
filterconfig/: filterconfig.go
internal/extproc/: chatcompletion_processor.go  chatcompletion_processor_test.go  mocks_test.go  processor.go  processor_test.go  server.go
internal/extproc/modelselect/: model_select.go
internal/extproc/router/: request_body.go  router.go  router_test.go
internal/extproc/translator/: openai_awsbedrock.go  openai_awsbedrock_test.go  openai_openai.go  openai_openai_test.go  translator.go
internal/metrics/: metrics.go  metrics_test.go  token_metrics.go  token_metrics_test.go
semantic_processor/: pyproject.toml  semantic_processor.py  test_semantic_service.sh
semantic_processor/model_selector_model/: .gitignore  model_selector_dataset_gen.py  model_selector_model_trainer.py
site/docs/capabilities/: index.md  monitoring.md
(+5 files in other folders)
