[project]
name = "semantic-processor"
version = "0.1.0"
description = "Select the right LLM based on the prompt request"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.7",
    "openai>=1.60.2",
    "pydantic>=2.10.6",
    "torch>=2.6.0",
    "transformers>=4.48.1",
    "uvicorn>=0.34.0",
]
